--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -104,6 +104,7 @@ beekeeper_wasm_build:
     - public-runner-docker
 
 beekeeper_wasm_package_generation:
+  extends: .job-defaults
   stage: build
   # emscripten image can be used as it contains all needed tools.
   image: ${EMSCRIPTEN_IMAGE}
@@ -174,6 +175,7 @@ test_beekeeper_wasm:
     - npm run test
 
 mirrornet_replay_test:
+  extends: .job-defaults
   stage: test
   image: "$CI_REGISTRY_IMAGE/ci-base-image$TEST_IMAGE_TAG"
   needs:
@@ -238,6 +240,7 @@ mirrornet_replay_test:
     - hived-for-tests
 
 .unit_tests_base:
+  extends: .job-defaults
   stage: test
   needs:
     - job: testnet_node_build
@@ -305,26 +308,26 @@ plugin_test:
   - timeout $((($PYTEST_TIMEOUT_MINUTES + 2) * 60)) pytest --timeout=$(($PYTEST_TIMEOUT_MINUTES * 60)) --junitxml="$JUNIT_REPORT" "${PROCESSES}" "${DURATIONS}" "${PYTEST_ARGS[@]}"
 
 .pytest_based:
-    variables:
-      JUNIT_REPORT: "report.xml" # should be ovverided by derived jobs
+  extends: .job-defaults
+  variables:
+    JUNIT_REPORT: "report.xml" # should be ovverided by derived jobs
 
-    interruptible: true
-    image: "$CI_REGISTRY_IMAGE/ci-base-image$TEST_IMAGE_TAG"
+  interruptible: true
+  image: "$CI_REGISTRY_IMAGE/ci-base-image$TEST_IMAGE_TAG"
 
-    before_script:
-      - python3 -m venv venv/
-      - . venv/bin/activate
-      - (cd $CI_PROJECT_DIR/tests/hive-local-tools && poetry install)
-    artifacts:
-      reports:
-        junit: $JUNIT_REPORT
-
-      name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
-      paths:
-        - "**/generated_during_*"
-        - "**/generated_by_package_fixtures"
-      when: always
-      expire_in: 1 week
+  before_script:
+    - python3 -m venv venv/
+    - . venv/bin/activate
+    - (cd $CI_PROJECT_DIR/tests/hive-local-tools && poetry install)
+  artifacts:
+    reports:
+      junit: $JUNIT_REPORT
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
+    paths:
+      - "**/generated_during_*"
+      - "**/generated_by_package_fixtures"
+    when: always
+    expire_in: 1 week
 
 .test_tools_based:
   extends: .pytest_based
@@ -831,6 +834,7 @@ several_node_restarts_tests:
     - public-runner-docker
 
 artifacts_generation_tests:
+  extends: .job-defaults
   stage: test
   image: "$CI_REGISTRY_IMAGE/ci-base-image$TEST_IMAGE_TAG"
   needs:
