More document/script cleanup

--- a/scripts/exchange_instance.conf
+++ b/scripts/exchange_instance.conf
@@ -10,7 +10,7 @@
 --plugin=wallet_bridge_api
 # Defines a range of accounts to track as a json pair ["from","to"]
 # Uncomment lines to track only your own exchange account
-# tracking more accounts will have a significant impact on resources needed
+# tracking more accounts can have a significant impact on resources needed
 --account-history-rocksdb-track-account-range=[\"binance-hot\",\"binance-hot\"]
 --account-history-rocksdb-track-account-range=[\"bittrex\",\"bittrex\"]
 --account-history-rocksdb-track-account-range=[\"blocktrades\",\"blocktrades\"]
