--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -35,6 +35,8 @@ variables:
   MIRRORNET_SKELETON_KEY: "5JNHfZYKGaomSFvd4NUdQ9qMcEAC43kujbfjueTHpVapX1Kzq2n"
   TEST_TOOLS_VALIDATE_RESPONSE_SCHEMAS: "TRUE"
 
+  NPM_TOKEN: $CI_JOB_TOKEN
+
 include:
   - template: Workflows/Branch-Pipelines.gitlab-ci.yml
   - local: '/scripts/ci-helpers/prepare_data_image_job.yml'
@@ -882,3 +884,17 @@ Trigger-full-mirrornet-conversion:
   trigger:
     include:
       - local: scripts/ci-helpers/full-mirrornet-conversion.yml
+
+publish_beekeeper_wasm_production:
+  stage: publish
+  image: node:16-alpine
+  script:
+    - npm publish
+  needs:
+    - job: beekeeper_wasm_build
+      artifacts: true
+  tags:
+    - public-runner-docker
+  only:
+    - master
+    - develop
