--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,8 @@ build-*/
 build_*/
 /.vs
 /out/isenseconfig/Linux-Release
+.npmrc
+package.json
 
 # various log and benchmark files
 advanced_benchmark.json
