--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -305,7 +305,7 @@ plugin_test:
      - processes: ${PYTEST_NUMBER_OF_PROCESSES}
      - log durations: ${PYTEST_LOG_DURATIONS}
      - additional arguments: ${PYTEST_ARGS[@]}"
-  - timeout $((($PYTEST_TIMEOUT_MINUTES + 2) * 60)) pytest --timeout=$(($PYTEST_TIMEOUT_MINUTES * 60)) --junitxml="$JUNIT_REPORT" "${PROCESSES}" "${DURATIONS}" "${PYTEST_ARGS[@]}"
+  - (timeout -v $((($PYTEST_TIMEOUT_MINUTES + 2) * 60)) pytest --timeout=$(($PYTEST_TIMEOUT_MINUTES * 60)) --junitxml="$JUNIT_REPORT" "${PROCESSES}" "${DURATIONS}" "${PYTEST_ARGS[@]}" && echo "TIMEOUT") || echo "TESTS PASSED"
 
 .pytest_based:
   extends: .job-defaults
@@ -864,7 +864,7 @@ operation_tests:
   stage: test
   extends: .test_tools_based
   variables:
-    PYTEST_TIMEOUT_MINUTES: 15
+    PYTEST_TIMEOUT_MINUTES: 1
     JUNIT_REPORT: $CI_PROJECT_DIR/tests/functional/python_tests/operation_tests/report.xml
   script:
     - cd tests/functional/python_tests/operation_tests
