Add account_update_tests group to operation_tests in CI yaml file
More tests requre more time to execute

--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -871,7 +871,8 @@ operation_tests:
     - *run-pytest
   parallel:
     matrix:
-      - OPERATION: [ cancel_transfer_from_savings,
+      - OPERATION: [ account_update_tests,
+      		     cancel_transfer_from_savings,
                      limit_order_tests,
                      test_recurrent_transfer,
                      test_transfer_to_vesting_operation,
