--- a/libraries/appbase/CMakeLists.txt
+++ b/libraries/appbase/CMakeLists.txt
@@ -27,6 +27,7 @@ if(ENABLE_COVERAGE_TESTING)
 endif()
 
 add_library( appbase STATIC
+             signals_handler.cpp
              application.cpp
              ${HEADERS}
            )
