--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -867,8 +867,17 @@ operation_tests:
     PYTEST_TIMEOUT_MINUTES: 15
     JUNIT_REPORT: $CI_PROJECT_DIR/tests/functional/python_tests/operation_tests/report.xml
   script:
-    - cd tests/functional/python_tests/operation_tests
+    - cd tests/functional/python_tests/operation_tests/$OPERATION
     - *run-pytest
+  parallel:
+    matrix:
+      - OPERATION: [ cancel_transfer_from_savings,
+                     limit_order_tests,
+                     test_recurrent_transfer,
+                     test_transfer_to_vesting_operation,
+                     transfer_from_savings_tests,
+                     transfer_tests,
+                     transfer_to_savings_tests ]
   tags:
     - public-runner-docker
 
