--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -22,8 +22,7 @@ variables:
 
   TOX_VERSION: "3.25.1"
 
-  DATA_CACHE_HIVE_TEMPLATE: /cache/replay_data_hive
-  DATA_CACHE_HIVE: "/cache/replay_data_hive_${CI_PIPELINE_ID}"
+  DATA_CACHE_HIVE_PREFIX: "/cache/replay_data_hive"
   BLOCK_LOG_SOURCE_DIR_5M: /blockchain/block_log_5m
   BLOCK_LOG_SOURCE_DIR_MIRRORNET_5M: /blockchain/block_log_5m_mirrornet
 
@@ -82,7 +81,6 @@ prepare_hived_data:
     HIVE_NETWORK_TYPE: mainnet
     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/docker/config_5M.ini"
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -91,7 +89,6 @@ cleanup_hived_cache_manual:
   stage: cleanup
   variables:
     CLEANUP_PATH_PATTERN: "/cache/replay_data_hive_*"
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -302,8 +299,7 @@ plugin_test:
   - name: $HIVED_IMAGE_NAME
     alias: hived-instance
     variables:
-      DATADIR: $DATA_CACHE_HIVE/datadir
-      SHM_DIR: $DATA_CACHE_HIVE/shm_dir
+      DATA_SOURCE: "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}"
       LOG_FILE: $CI_JOB_NAME.log
     command: ["--replay-blockchain", "--stop-replay-at-block=5000000"]
 
@@ -623,6 +619,7 @@ patterns_tests:
     PYTHONPATH: "$CI_PROJECT_DIR/tests/python/hive-local-tools/test-tools/package"
     TEST_SUITE: "(condenser_api_patterns and (get_block or get_block_header) ) or block_api_patterns or (not get_transaction_hex and (get_transaction or get_account_history or enum_virtual_ops or get_ops_in_block))"
     HIVED_UID: $HIVED_UID
+    HIVED_COMMIT: $HIVED_COMMIT # HIVED_COMMIT and HIVED_UID must be in this section to be passed to service
   needs:
     - job: prepare_hived_data
       artifacts: true
@@ -642,7 +639,7 @@ patterns_tests:
 
   after_script:
     - rm docker_entrypoint.log -f
-    - cp $DATA_CACHE_HIVE/datadir/$CI_JOB_NAME.log $CI_PROJECT_DIR/docker_entrypoint.log
+    - cp "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}/datadir/$CI_JOB_NAME.log" "$CI_PROJECT_DIR/docker_entrypoint.log"
 
   artifacts:
     reports:
@@ -656,7 +653,6 @@ patterns_tests:
     - docker_entrypoint.log
     when: always
     expire_in: 6 hours
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -686,6 +682,7 @@ python_pattern_mainnet_tests:
     JUNIT_REPORT: $CI_PROJECT_DIR/tests/python/api_tests/python_patterns_tests/report.xml
     BINARY_CACHE_PATH: "hived-binaries"
     HIVED_UID: $HIVED_UID
+    HIVED_COMMIT: $HIVED_COMMIT
   needs:
     - job: prepare_hived_image
       artifacts: true
@@ -706,7 +703,7 @@ python_pattern_mainnet_tests:
 
   after_script:
     - rm docker_entrypoint.log -f
-    - cp $DATA_CACHE_HIVE/datadir/$CI_JOB_NAME.log $CI_PROJECT_DIR/docker_entrypoint.log
+    - cp "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}/datadir/$CI_JOB_NAME.log" "$CI_PROJECT_DIR/docker_entrypoint.log"
 
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
@@ -718,7 +715,6 @@ python_pattern_mainnet_tests:
     - docker_entrypoint.log
     when: always
     expire_in: 6 hours
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -748,12 +744,13 @@ message_format_mainnet_5m_tests:
     NODE_ADDRESS: "hived-instance:8091"
     NODE_TYPE: "mainnet_5m"
     HIVED_UID: $HIVED_UID
+    HIVED_COMMIT: $HIVED_COMMIT
   before_script:
     - curl -I ${NODE_ADDRESS} || (echo "error connecting to service hived-instance" && false)
     - !reference [.message_format_tests, before_script]
   after_script:
     - rm docker_entrypoint.log -f
-    - cp $DATA_CACHE_HIVE/datadir/$CI_JOB_NAME.log $CI_PROJECT_DIR/docker_entrypoint.log
+    - cp "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}/datadir/$CI_JOB_NAME.log" "$CI_PROJECT_DIR/docker_entrypoint.log"
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
     reports:
@@ -764,7 +761,6 @@ message_format_mainnet_5m_tests:
     - docker_entrypoint.log
     when: always
     expire_in: 1 week
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -805,6 +801,7 @@ witness_tests:
     PYTEST_TIMEOUT_MINUTES: 5
     JUNIT_REPORT: $CI_PROJECT_DIR/tests/python/functional/witness_tests/report.xml
     HIVED_UID: $HIVED_UID
+    HIVED_COMMIT: $HIVED_COMMIT
   script:
     - curl -I ${NODE_ADDRESS} || (echo "error connecting to service hived-instance" && false)
     - cd tests/python/functional/witness_tests
@@ -812,8 +809,7 @@ witness_tests:
     - *run-pytest
   after_script:
     - rm docker_entrypoint.log -f
-    - cp $DATA_CACHE_HIVE/datadir/$CI_JOB_NAME.log $CI_PROJECT_DIR/docker_entrypoint.log
-  resource_group: ${CI_COMMIT_SHA}
+    - cp "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}/datadir/$CI_JOB_NAME.log" "$CI_PROJECT_DIR/docker_entrypoint.log"
   tags:
     - data-cache-storage
 
