--- a/scripts/ci-helpers/prepare_data_image_job.yml
+++ b/scripts/ci-helpers/prepare_data_image_job.yml
@@ -48,7 +48,7 @@ include:
     HIVE_NETWORK_TYPE: mainnet
   script:
     - $SCRIPTS_PATH/ci-helpers/get_image4submodule.sh
-        "$SUBMODULE_DIR" registry.gitlab.syncad.com/hive/hive/ "HIVED_IMAGE_NAME" "$REGISTRY_USER" "$REGISTRY_PASS"
+        "$SUBMODULE_DIR" registry.gitlab.syncad.com/hive/hive/ HIVED "$REGISTRY_USER" "$REGISTRY_PASS"
         --export-binaries="$BINARY_CACHE_PATH" --network-type="$HIVE_NETWORK_TYPE"
     - chmod -Rc a+rwx "./$BINARY_CACHE_PATH"
     - ls -la ./$BINARY_CACHE_PATH/*
@@ -69,15 +69,12 @@ include:
     SCRIPTS_PATH: "$SUBMODULE_DIR/scripts"
     BLOCK_LOG_SOURCE_DIR: ""
     CONFIG_INI_SOURCE: ""
-    DATA_CACHE_HIVE_COMMIT: "${DATA_CACHE_HIVE_TEMPLATE}_${HIVED_IMAGE_NAME_COMMIT}"
     HIVE_NETWORK_TYPE: mainnet
   script:
-    - mkdir "$DATA_CACHE_HIVE_COMMIT" -p
-    - flock "$DATA_CACHE_HIVE_COMMIT" $SCRIPTS_PATH/ci-helpers/build_data.sh $HIVED_IMAGE_NAME
-        --data-cache="$DATA_CACHE_HIVE_COMMIT" --block-log-source-dir="$BLOCK_LOG_SOURCE_DIR" --config-ini-source="$CONFIG_INI_SOURCE"
-    - mkdir "$DATA_CACHE_HIVE"
-    - cp "$DATA_CACHE_HIVE_COMMIT"/* "$DATA_CACHE_HIVE" -rp
-    - cp "$DATA_CACHE_HIVE_COMMIT/datadir/docker_entrypoint.log" "$CI_PROJECT_DIR"
+    - mkdir "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}/datadir" -p
+    - flock "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}/datadir" $SCRIPTS_PATH/ci-helpers/build_data.sh $HIVED_IMAGE_NAME
+        --data-cache="${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}" --block-log-source-dir="$BLOCK_LOG_SOURCE_DIR" --config-ini-source="$CONFIG_INI_SOURCE"
+    - cp "${DATA_CACHE_HIVE_PREFIX}_${HIVED_COMMIT}/datadir/docker_entrypoint.log" "$CI_PROJECT_DIR"
     - echo "HIVED_UID=$(id -u)" > hived_uid.env
     - cat hived_uid.env
 
