Add npm publish config

--- a/package.json.template
+++ b/package.json.template
@@ -19,5 +19,12 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.syncad.com/hive/hive.git"
+  },
+  "engines": {
+    "node": ">= 12"
+  },
+  "publishConfig": {
+    "registry": "",
+    "tag": ""
   }
 }
