--- a/programs/beekeeper/core/CMakeLists.txt
+++ b/programs/beekeeper/core/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library( beekeeper_core
              ${HEADERS}
            )
 
-target_link_libraries( beekeeper_core hive_protocol )
+target_link_libraries( beekeeper_core fc_core )
 target_include_directories( beekeeper_core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
 target_compile_options( beekeeper_core PUBLIC -fexceptions )
 target_link_options( beekeeper_core PUBLIC -fexceptions )
