--- a/tests/hive-local-tools/pyproject.toml
+++ b/tests/hive-local-tools/pyproject.toml
@@ -34,3 +34,6 @@ shared-tools = { path = "shared-tools", develop = true }
 test-tools = { path = "test-tools", develop = true }
 tests_api = { path = "tests_api", develop = true }
 wax = "0.0.1a4+277cf4f"
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "3.4.0"
