--- a/tests/hive-local-tools/.pre-commit-config.yaml
+++ b/tests/hive-local-tools/.pre-commit-config.yaml
@@ -22,6 +22,9 @@ repos:
         args: [ "--unsafe" ]
       - id: check-json
         exclude: ^tests/unit/|^tests/api_tests/pattern_tests/tavern/
+      - id: pretty-format-json
+        args: [ "--autofix" ]
+        exclude: *excluded_files_regex
       - id: trailing-whitespace
         exclude: *excluded_files_regex
       - id: end-of-file-fixer
