Add pre-commit hook end-of-file-fixer

--- a/tests/hive-local-tools/.pre-commit-config.yaml
+++ b/tests/hive-local-tools/.pre-commit-config.yaml
@@ -24,3 +24,5 @@ repos:
         exclude: ^tests/unit/|^tests/api_tests/pattern_tests/tavern/
       - id: trailing-whitespace
         exclude: *excluded_files_regex
+      - id: end-of-file-fixer
+        exclude: *excluded_files_regex
