--- a/tests/hive-local-tools/pyproject.toml
+++ b/tests/hive-local-tools/pyproject.toml
@@ -39,3 +39,8 @@ wax = "0.0.1a4+277cf4f"
 pre-commit = "3.4.0"
 black = "23.9.1"
 ruff = "0.0.292"
+
+
+[tool.black]
+line-length = 120
+preview = true
