--- a/tests/hive-local-tools/.pre-commit-config.yaml
+++ b/tests/hive-local-tools/.pre-commit-config.yaml
@@ -41,3 +41,9 @@ repos:
       - id: black
         name: format code using black
         args: [ "--config", "tests/hive-local-tools/pyproject.toml" ]
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.0.292'
+    hooks:
+      - id: ruff
+        name: linting code with Ruff
+        args: [ "--config", "tests/hive-local-tools/pyproject.toml", "--fix" ]
