--- a/tests/hive-local-tools/pyproject.toml
+++ b/tests/hive-local-tools/pyproject.toml
@@ -60,5 +60,11 @@ ignore = [
     "E501", # line too long, handled by black
 ]
 
+[tool.ruff.per-file-ignores]
+"tests/functional/python_tests/fork_tests/**" = [
+    "N803", # TODO: Make these names more descriptive
+    "N806", # TODO: Make these names more descriptive
+]
+
 [tool.ruff.isort]
 known-first-party = ["hive_local_tools", "test_tools", "shared_tools", "hive_utils"]
