--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -61,10 +61,13 @@ ignore = [
 ]
 
 [tool.ruff.per-file-ignores]
-"tests/python/functional/fork_tests/**" = [
+"/**/tests/python/functional/fork_tests/**" = [
     "N803", # TODO: Make these names more descriptive
     "N806", # TODO: Make these names more descriptive
 ]
+# ignore submodules:
+"/**/test-tools/**" = ["ALL"]
+"/**/tests_api/**" = ["ALL"]
 
 [tool.ruff.isort]
 known-first-party = ["hive_local_tools", "test_tools", "shared_tools", "hive_utils"]
