Refactor pyproject.toml - sort known_first_party, remove unnecessary comment

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -16,8 +16,8 @@ packages = [
 
 source = [
     { name = "PyPI", priority = "primary" },
-    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },  # wax
-    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },  # schemas
+    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
+    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
 ]
 
 
@@ -71,4 +71,9 @@ ignore = [
 "/**/tests_api/**" = ["ALL"]
 
 [tool.ruff.isort]
-known-first-party = ["hive_local_tools", "test_tools", "shared_tools", "hive_utils"]
+known-first-party = [
+    "hive_local_tools",
+    "hive_utils",
+    "shared_tools",
+    "test_tools",
+]
