Include schemas and wax in known-first-party

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -74,6 +74,8 @@ ignore = [
 known-first-party = [
     "hive_local_tools",
     "hive_utils",
+    "schemas",
     "shared_tools",
     "test_tools",
+    "wax",
 ]
