Enable ruff YTT rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -57,6 +57,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "I",
     "N",
     "UP",
+    "YTT",
 ]
 ignore = [
     "E501", # line too long, handled by black
