Enable ruff ASYNC rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -58,6 +58,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "N",
     "UP",
     "YTT",
+    "ASYNC",
 ]
 ignore = [
     "E501", # line too long, handled by black
