Add commented ruff BLE rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -59,6 +59,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "UP",
     "YTT",
     "ASYNC",
+#    "BLE",  # TODO: Consider enabling this
 ]
 ignore = [
     "E501", # line too long, handled by black
