Add commented ruff A rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -62,6 +62,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
 #    "BLE",  # TODO: Consider enabling this
 #    "FBT",  # TODO: Consider enabling this
     "B",
+#    "A",  # TODO: Consider enabling this
 ]
 ignore = [
     "E501", # line too long, handled by black
