Enable ruff ISC rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -65,6 +65,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
 #    "A",  # TODO: Consider enabling this
     "C4",
     "FA",
+    "ISC",
 ]
 ignore = [
     "E501", # line too long, handled by black
