Enable ruff INP rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -66,6 +66,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "C4",
     "FA",
     "ISC",
+    "INP",
 ]
 ignore = [
     "E501", # line too long, handled by black
