Enable ruff PIE rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -67,6 +67,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "FA",
     "ISC",
     "INP",
+    "PIE",
 ]
 ignore = [
     "E501", # line too long, handled by black
