Ruff PIE rule - Ignore PIE804 in dhf
tests/python/functional/beem_tests/decentralized_hive_fund_tests/id_collision_test.py:78:18: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/proposal_payments_tests/test_proposal_payment_007.py:20:14: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/proposal_payments_tests/test_proposal_payment_009.py:111:10: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_beem_dhf.py:43:10: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_beem_dhf.py:133:10: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_beem_dhf.py:176:10: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_beem_dhf.py:224:14: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_beem_dhf.py:292:18: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_beem_dhf.py:307:10: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_beem_dhf.py:331:10: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_hybrid_operations.py:108:14: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_hybrid_operations.py:133:10: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_list_proposals.py:56:14: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_list_voter_proposal.py:74:14: PIE804 Unnecessary `dict` kwargs
tests/python/functional/beem_tests/decentralized_hive_fund_tests/test_list_voter_proposal.py:106:10: PIE804 Unnecessary `dict` kwargs
t

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -78,6 +78,9 @@ ignore = [
     "N803", # TODO: Make these names more descriptive
     "N806", # TODO: Make these names more descriptive
 ]
+"/**/tests/python/**/decentralized_hive_fund*/**" = [
+    "PIE804", # TODO: Consider fixing
+]
 # ignore submodules:
 "/**/test-tools/**" = ["ALL"]
 "/**/tests_api/**" = ["ALL"]
