Enable ruff PYI rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -68,6 +68,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "ISC",
     "INP",
     "PIE",
+    "PYI",
 ]
 ignore = [
     "E501", # line too long, handled by black
