--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -69,9 +69,11 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "INP",
     "PIE",
     "PYI",
+    "PT",
 ]
 ignore = [
     "E501", # line too long, handled by black
+    "PT004", # fixture does not return anything, add leading underscore;  issue: pytest seems to ignore (not launch) auto-use fixtures with leading underscode
 ]
 
 [tool.ruff.per-file-ignores]
