Enable ruff RSE rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -70,6 +70,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "PIE",
     "PYI",
     "PT",
+    "RSE",
 ]
 ignore = [
     "E501", # line too long, handled by black
