Enable ruff RET rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -71,6 +71,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "PYI",
     "PT",
     "RSE",
+    "RET",
 ]
 ignore = [
     "E501", # line too long, handled by black
