Enable ruff SLF rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -72,6 +72,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "PT",
     "RSE",
     "RET",
+    "SLF",
 ]
 ignore = [
     "E501", # line too long, handled by black
